# cvmboot

./: .gitattributes  .gitignore  Makefile  README.md  defs.mak  efi.mak
akvsign/: Cargo.toml  Makefile
akvsign/src/: cosesign1.rs  main.rs
azcopy/: Makefile  download.sh
bootloader/: .gitignore  Makefile  allocator.c  byteorder.h  conf.c  conf.h  console.c  console.h  cpio.c  cpio.h  efifile.c  efifile.h  efivar.c  efivar.h  events.c  events.h  globals.c  globals.h  kernel.c  kernel.h  key.c  key.h  linkcheck  logo.c  logo.txt  main.c  notes.txt  sig.c  sig.h  sleep.c  sleep.h  system.c  system.h  tcg2.c  tcg2.h  tpm2.c  tpm2.h  tpmbuf.c  tpmbuf.h
cencode/: .gitignore  Makefile  README.md  main.c
common/: Makefile  buf.c  buf.h  cvmvhd.c  cvmvhd.h  err.c  err.h  exec.c  exec.h  file.c  file.h  getoption.c  getoption.h  key.c  key.h  sparsecmp.c  sparsecmp.h  strarr.c  strarr.h  strings.c  strings.h  sudo.c  sudo.h
cvmdisk/: .gitignore  Makefile  README.md  allocator.c  bits.h  blockdev.c  blockdev.h  colors.c  colors.h  defs.h  eraise.c  eraise.h  events.c  events.h  find.c  find.h  frags.c  frags.h  globals.h  gpt.c  gpt.h  guid.c  guid.h  inventory.c  inventory.h  loop.c  loop.h  main.c  mount.c  mount.h  notes.md  options.c  options.h  path.c  path.h  progress.c  progress.h  random.c  random.h  round.h  (+19 more)
cvmsign/: .gitignore  Makefile  main.c
cvmvhd/: .gitignore  Makefile  main.c
install/: install-azcopy.sh  install.sh
libc/: Makefile  README.md  __alloc_format16.c  __memcpy_chk.c  __printf_chk.c  __snprintf_chk.c  __stack_chk_fail.c  __strcat_chk.c  (+57 more)
(+67 files in other folders)
