[package]
name = "akvsign"
version = "0.1.0"
edition = "2021"

[dependencies]
azure_core = "0.20.0"
azure_identity = "0.20.0"
azure_security_keyvault = "0.20.0"
base64 = "0.22.1"
bitfield-struct = "0.5"
minicbor = { version = "0.25.1", features = ["derive", "std"] }
openssl = "0.10.66"
rand = "0.8.5"
structopt = "0.3.26"
tokio = { version = "1.40.0", features = ["full"] }
